<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Giggity</string>
    <string name="search_hint">Search events</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!--  Settings -->
    <string name="default_view">Default view</string>
    <string name="always_refresh">Always reload schedules</string>
    <string name="always_refresh_sub_off">Check for new version once a day</string>
    <string name="strict_ssl">Strict SSL</string>
    <string name="strict_ssl_sub">Proper HTTPS certificate validation</string>
    
	<string name="block_schedule_style">Style</string>
	<string name="block_schedule">Block schedule</string>
	<string name="block_schedule_element_size_sub">Size of a block schedule block</string>
	<string name="block_schedule_element_size">Block size</string>

	<string name="reminder">Event reminders</string>
	<string name="reminder_enabled_sub_on">Remind me of marked events</string>
	<string name="reminder_enabled_sub_off">Don\'t remind me of marked events</string>
	<string name="reminder_enabled">Enable reminders</string>
	<string name="reminder_period">Minutes before event</string>
	
	<!-- EventDialog -->
	<string name="speaker">Speaker:</string>
	<string name="speakers">Speakers:</string>
	<string name="track">Track:</string>
	<string name="remind_me">Remind me</string>
	<string name="overlap">Overlaps with</string>
	<string name="hide_what">Hide...</string>
	<string name="hide_item">...this item</string>
	<string name="hide_room">...entire room</string>
	<string name="hide_track">...entire track</string>
				
	<!-- ScheduleViewActivity -->
	<string name="loading_schedule">Loading schedule data...</string>
	<string name="loading_error">Load error</string>
	<string name="export_selections">Export selections</string>
	<string name="import_selections">Import selections</string>
	<string name="no_selections">No selections to be exported</string>
	<string name="qr_tip">Please use the QR scan button in the main menu on your other device to import this</string>	
	<!-- Menu -->
	<string name="settings">Settings</string>
	<string name="change_day">Change day</string>
	<string name="timetable">Timetable</string>
	<string name="tracks">Tracks</string>
	<string name="now_next">Now and next</string>
	<string name="my_events">My events</string>
	<string name="search">Search</string>
		
	<!-- NowNext -->
	<string name="no_events_today">No events today.</string>
	<string name="now">Now:</string>
	<string name="next">Next:</string>
	
	<!-- MyItemsView -->
	<string name="coming_up">Coming up:</string>
	<string name="seen_so_far">Seen so far:</string>
	<string name="none_marked">No items marked yet.</string>
	
	<!-- ChooserActivity -->
	<string name="refresh">Refresh</string>
	<string name="unhide">Recover hidden items</string>
	<string name="remove">Remove</string>
	<string name="show_url">Show URL...</string>
	<string name="chooser_now">Current events:</string>
	<string name="chooser_later">Upcoming events:</string>
	<string name="chooser_past">Previous events:</string>
	
	<!--  Widget -->
	<string name="widg_longdate">EEEE d MMMM \'at\' HH:mm</string>
	<string name="widg_shortdate">EEEE \'at\' HH:mm</string>
	<string name="widg_in_room">in</string>
	<string name="widg_soon">Coming soon</string>
</resources>
